Register Activity created, and system-upload information to DB was build

--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -46,38 +46,38 @@
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent" />
 
-        <EditText
-            android:id="@+id/textLastName"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="24dp"
-            android:background="@drawable/shape"
-            android:ems="10"
-            android:hint="Apellidos"
-            android:inputType="text"
-            android:padding="6dp"
-            android:paddingStart="20dp"
-            android:textSize="14sp"
-            app:layout_constraintBottom_toTopOf="@+id/textCC"
-            app:layout_constraintEnd_toEndOf="@+id/textCC" />
+    <EditText
+        android:id="@+id/textLastName"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="24dp"
+        android:background="@drawable/shape"
+        android:ems="10"
+        android:hint="Apellidos"
+        android:inputType="textPersonName|text"
+        android:padding="6dp"
+        android:paddingStart="20dp"
+        android:textSize="14sp"
+        app:layout_constraintBottom_toTopOf="@+id/textCC"
+        app:layout_constraintEnd_toEndOf="@+id/textCC" />
 
-        <EditText
-            android:id="@+id/textName"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="32dp"
-            android:layout_marginEnd="16dp"
-            android:layout_marginBottom="24dp"
-            android:background="@drawable/shape"
-            android:ems="10"
-            android:hint="Nombres"
-            android:inputType="text"
-            android:padding="6dp"
-            android:paddingStart="20dp"
-            android:textSize="14sp"
-            app:layout_constraintBottom_toTopOf="@+id/textCC"
-            app:layout_constraintEnd_toStartOf="@+id/textLastName"
-            app:layout_constraintStart_toStartOf="parent" />
+    <EditText
+        android:id="@+id/textCcA"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="32dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginBottom="24dp"
+        android:background="@drawable/shape"
+        android:ems="10"
+        android:hint="Nombres"
+        android:inputType="textPersonName|text"
+        android:padding="6dp"
+        android:paddingStart="20dp"
+        android:textSize="14sp"
+        app:layout_constraintBottom_toTopOf="@+id/textCC"
+        app:layout_constraintEnd_toStartOf="@+id/textLastName"
+        app:layout_constraintStart_toStartOf="parent" />
 
         <Button
             android:id="@+id/btnRegister"
@@ -168,8 +168,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Nombres:"
-            app:layout_constraintBottom_toTopOf="@+id/textName"
-            app:layout_constraintStart_toStartOf="@+id/textName"
+            app:layout_constraintBottom_toTopOf="@+id/textCcA"
+            app:layout_constraintStart_toStartOf="@+id/textCcA"
             app:layout_constraintTop_toBottomOf="@+id/textView13"
             app:layout_constraintVertical_bias="1.0" />
 
