--- a/app/src/main/res/layout/activity_access.xml
+++ b/app/src/main/res/layout/activity_access.xml
@@ -68,7 +68,7 @@
 
                 <TextView
                     android:id="@+id/textNameA"
-                    android:layout_width="100dp"
+                    android:layout_width="120dp"
                     android:layout_height="wrap_content"
                     android:paddingEnd="8dp"
                     android:text="Nombre"
@@ -79,7 +79,7 @@
                     android:id="@+id/textDesNameA"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="TextView" />
+                    android:text="Loading..." />
 
             </LinearLayout>
 
@@ -94,7 +94,7 @@
 
                 <TextView
                     android:id="@+id/textCcA"
-                    android:layout_width="100dp"
+                    android:layout_width="120dp"
                     android:layout_height="wrap_content"
                     android:paddingEnd="8dp"
                     android:text="Cédula Ciudadana"
@@ -105,7 +105,7 @@
                     android:id="@+id/textDesCcA"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="TextView" />
+                    android:text="Loading..." />
 
             </LinearLayout>
 
@@ -120,7 +120,7 @@
 
                 <TextView
                     android:id="@+id/textEmailA"
-                    android:layout_width="100dp"
+                    android:layout_width="120dp"
                     android:layout_height="wrap_content"
                     android:paddingEnd="8dp"
                     android:text="Correo Electrónico"
@@ -131,7 +131,7 @@
                     android:id="@+id/textDesEmailA"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="TextView" />
+                    android:text="Loading..." />
 
             </LinearLayout>
 
@@ -147,7 +147,7 @@
 
                 <TextView
                     android:id="@+id/textOcupaA"
-                    android:layout_width="100dp"
+                    android:layout_width="120dp"
                     android:layout_height="wrap_content"
                     android:paddingEnd="8dp"
                     android:text="Residencia"
@@ -155,10 +155,10 @@
                     android:textStyle="bold" />
 
                 <TextView
-                    android:id="@+id/textDesOcupaA"
+                    android:id="@+id/textDesCityA"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="TextView" />
+                    android:text="Loading..." />
 
             </LinearLayout>
 
@@ -173,7 +173,7 @@
 
                 <TextView
                     android:id="@+id/textCityA"
-                    android:layout_width="100dp"
+                    android:layout_width="120dp"
                     android:layout_height="wrap_content"
                     android:paddingEnd="8dp"
                     android:text="Ocupación"
@@ -181,10 +181,10 @@
                     android:textStyle="bold" />
 
                 <TextView
-                    android:id="@+id/textDesCityA"
+                    android:id="@+id/textDesOcupaA"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="TextView" />
+                    android:text="Loading..." />
 
             </LinearLayout>
 
@@ -199,7 +199,7 @@
 
                 <TextView
                     android:id="@+id/textBloodA"
-                    android:layout_width="100dp"
+                    android:layout_width="120dp"
                     android:layout_height="wrap_content"
                     android:paddingEnd="8dp"
                     android:text="Grupo Sanguineo"
@@ -210,7 +210,7 @@
                     android:id="@+id/textDesBloodA"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="TextView" />
+                    android:text="Loading..." />
 
             </LinearLayout>
 
@@ -225,7 +225,7 @@
 
                 <TextView
                     android:id="@+id/textContactA"
-                    android:layout_width="100dp"
+                    android:layout_width="120dp"
                     android:layout_height="wrap_content"
                     android:paddingEnd="8dp"
                     android:text="Género"
@@ -233,10 +233,10 @@
                     android:textStyle="bold" />
 
                 <TextView
-                    android:id="@+id/textDesContactA"
+                    android:id="@+id/textDesGenderA"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="TextView" />
+                    android:text="Loading..." />
 
             </LinearLayout>
 
@@ -251,7 +251,7 @@
 
                 <TextView
                     android:id="@+id/textGenderA"
-                    android:layout_width="100dp"
+                    android:layout_width="120dp"
                     android:layout_height="wrap_content"
                     android:paddingEnd="8dp"
                     android:text="Problemas Cardiacos"
@@ -259,10 +259,10 @@
                     android:textStyle="bold" />
 
                 <TextView
-                    android:id="@+id/textDesGenderA"
+                    android:id="@+id/textDescCardiacA"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="TextView" />
+                    android:text="Loading..." />
 
             </LinearLayout>
 
@@ -277,7 +277,7 @@
 
                 <TextView
                     android:id="@+id/textCardiacA"
-                    android:layout_width="100dp"
+                    android:layout_width="120dp"
                     android:layout_height="wrap_content"
                     android:paddingEnd="8dp"
                     android:text="Historial de cáncer"
@@ -285,10 +285,10 @@
                     android:textStyle="bold" />
 
                 <TextView
-                    android:id="@+id/textDescCardiacA"
+                    android:id="@+id/textDesCancerA"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="TextView" />
+                    android:text="Loading..." />
 
             </LinearLayout>
 
@@ -303,7 +303,7 @@
 
                 <TextView
                     android:id="@+id/textCancerA"
-                    android:layout_width="100dp"
+                    android:layout_width="120dp"
                     android:layout_height="wrap_content"
                     android:paddingEnd="8dp"
                     android:text="Cirugías"
@@ -311,10 +311,10 @@
                     android:textStyle="bold" />
 
                 <TextView
-                    android:id="@+id/textDesCancerA"
+                    android:id="@+id/textDesCirugA"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="TextView" />
+                    android:text="Loading..." />
 
             </LinearLayout>
 
@@ -329,7 +329,7 @@
 
                 <TextView
                     android:id="@+id/textCirugA"
-                    android:layout_width="100dp"
+                    android:layout_width="120dp"
                     android:layout_height="wrap_content"
                     android:paddingEnd="8dp"
                     android:text="Alergias"
@@ -337,10 +337,10 @@
                     android:textStyle="bold" />
 
                 <TextView
-                    android:id="@+id/textDesCirugA"
+                    android:id="@+id/textDesAlergicA"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="TextView" />
+                    android:text="Loading..." />
 
             </LinearLayout>
 
@@ -355,7 +355,7 @@
 
                 <TextView
                     android:id="@+id/textAlergicA"
-                    android:layout_width="100dp"
+                    android:layout_width="120dp"
                     android:layout_height="wrap_content"
                     android:paddingEnd="8dp"
                     android:text="ETS"
@@ -363,10 +363,10 @@
                     android:textStyle="bold" />
 
                 <TextView
-                    android:id="@+id/textDesAlergicA"
+                    android:id="@+id/textDesEtsA"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="TextView" />
+                    android:text="Loading..." />
 
             </LinearLayout>
 
@@ -382,7 +382,7 @@
 
                 <TextView
                     android:id="@+id/textEtsA"
-                    android:layout_width="100dp"
+                    android:layout_width="120dp"
                     android:layout_height="wrap_content"
                     android:paddingEnd="8dp"
                     android:text="Contacto de Emergencia"
@@ -390,10 +390,10 @@
                     android:textStyle="bold" />
 
                 <TextView
-                    android:id="@+id/textDesEtsA"
+                    android:id="@+id/textDesContactA"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="TextView" />
+                    android:text="Loading..." />
 
             </LinearLayout>
         </LinearLayout>
