Register Activity created, and system-upload information to DB was build

--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -79,20 +79,20 @@
         app:layout_constraintEnd_toStartOf="@+id/textLastName"
         app:layout_constraintStart_toStartOf="parent" />
 
-        <Button
-            android:id="@+id/btnRegister"
-            android:layout_width="120dp"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
-            android:background="@drawable/darkblueshape"
-            android:padding="8dp"
-            android:text="@string/btnResgist"
-            android:textColor="#EEEEEE"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/notifRegist"
-            app:layout_constraintVertical_bias="0.0" />
+    <Button
+        android:id="@+id/btnRegister"
+        android:layout_width="160dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:background="@drawable/darkblueshape"
+        android:padding="8dp"
+        android:text="@string/btnResgist"
+        android:textColor="#EEEEEE"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/notifRegist"
+        app:layout_constraintVertical_bias="0.0" />
 
         <EditText
             android:id="@+id/textEmail"
@@ -173,13 +173,15 @@
             app:layout_constraintTop_toBottomOf="@+id/textView13"
             app:layout_constraintVertical_bias="1.0" />
 
-        <TextView
-            android:id="@+id/textView8"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Apellidos:"
-            app:layout_constraintBottom_toTopOf="@+id/textLastName"
-            app:layout_constraintStart_toStartOf="@+id/textLastName" />
+    <TextView
+        android:id="@+id/textView8"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Apellidos:"
+        app:layout_constraintBottom_toTopOf="@+id/textLastName"
+        app:layout_constraintStart_toStartOf="@+id/textLastName"
+        app:layout_constraintTop_toBottomOf="@+id/textView13"
+        app:layout_constraintVertical_bias="1.0" />
 
         <TextView
             android:id="@+id/textView9"
@@ -213,17 +215,19 @@
             app:layout_constraintBottom_toTopOf="@+id/textPassword"
             app:layout_constraintStart_toStartOf="@+id/textPassword" />
 
-        <TextView
-            android:id="@+id/textView13"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="16dp"
-            android:fontFamily="sans-serif-medium"
-            android:text="Registro"
-            android:textSize="24sp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+    <TextView
+        android:id="@+id/textView13"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        android:fontFamily="sans-serif-medium"
+        android:text="Registro"
+        android:textSize="24sp"
+        app:layout_constraintBottom_toTopOf="@+id/textCcA"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.0" />
 
         <TextView
             android:id="@+id/textAccount"
