--- a/app/src/main/res/layout/activity_update_info.xml
+++ b/app/src/main/res/layout/activity_update_info.xml
@@ -43,7 +43,7 @@
                 android:layout_marginBottom="8dp"
                 android:background="@drawable/shape"
                 android:ems="10"
-                android:hint="Ciudad"
+                android:hint="Ciudad (Bogotá, Medellín, Cali, etc)"
                 android:inputType="textPostalAddress"
                 android:padding="8dp"
                 android:paddingStart="20dp"
@@ -57,7 +57,7 @@
                 android:layout_marginBottom="8dp"
                 android:background="@drawable/shape"
                 android:ems="10"
-                android:hint="Localidad"
+                android:hint="Localidad (Kennedy, Suba, Bosa, etc)"
                 android:inputType="textPostalAddress"
                 android:padding="8dp"
                 android:paddingStart="20dp"
@@ -85,7 +85,7 @@
                 android:layout_marginBottom="8dp"
                 android:background="@drawable/shape"
                 android:ems="10"
-                android:hint="Fecha de nacimiento"
+                android:hint="Fecha de nacimiento (30/04/2000)"
                 android:inputType="date"
                 android:padding="8dp"
                 android:paddingStart="20dp"
