--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,7 @@
     <color name="colorPrimary">#6200EE</color>
     <color name="colorPrimaryDark">#3700B3</color>
     <color name="colorAccent">#03DAC5</color>
+    <color name="backCalendar">#9C2D649A</color>
+    <color name="noCalendar">#924A4A4A</color>
+    <color name="green">@android:color/holo_green_dark</color>
 </resources>
