--- a/app/src/main/res/layout/doctors_activity_main.xml
+++ b/app/src/main/res/layout/doctors_activity_main.xml
@@ -23,12 +23,12 @@
         android:id="@+id/spinnerMedico"
         android:layout_width="261dp"
         android:layout_height="48dp"
-        android:layout_marginTop="308dp"
+        android:layout_marginTop="128dp"
         android:background="@drawable/darkblueshape"
         android:paddingStart="24dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/imageView2" />
 
     <Spinner
         android:id="@+id/spinnerHora"
@@ -58,13 +58,13 @@
 
     <ImageView
         android:id="@+id/imageView2"
-        android:layout_width="310dp"
-        android:layout_height="344dp"
-        android:layout_marginBottom="64dp"
-        app:layout_constraintBottom_toTopOf="@+id/spinnerHora"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="82dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.495"
         app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@mipmap/logo" />
 
     <TextView
@@ -80,7 +80,8 @@
         app:layout_constraintBottom_toTopOf="@+id/spinnerMedico"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/imageView2" />
 
     <Button
         android:id="@+id/buttonCancel"
