--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,4 +6,11 @@
     <color name="backCalendar">#9C2D649A</color>
     <color name="noCalendar">#924A4A4A</color>
     <color name="green">@android:color/holo_green_dark</color>
+    <color name="grey_100">#F5F5F5</color>
+    <color name="black_1">#212121</color>
+    <color name="grey_300">#E0E0E0</color>
+    <color name="grey_500">#9E9E9E</color>
+    <color name="white">#FFFFFF</color>
+    <color name="gray_50">#FAFAFA</color>
+    <color name="transparent">#00000000 </color>
 </resources>
