Ft part history adapted from chat view - Meeting U

--- a/app/src/main/res/layout/activity_main_hisory.xml
+++ b/app/src/main/res/layout/activity_main_hisory.xml
@@ -14,6 +14,7 @@
         android:layout_marginStart="24dp"
         android:layout_marginBottom="8dp"
         android:layout_weight="1"
+        android:paddingTop="24dp"
         android:scrollbars="vertical"
         android:textColor="#FFFFFF"
         app:layout_constraintBottom_toTopOf="@+id/escribir"
