--- a/app/src/main/res/layout/card_view_history.xml
+++ b/app/src/main/res/layout/card_view_history.xml
@@ -10,25 +10,17 @@
 
 
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:layout_width="wrap_content"
+        android:id="@+id/lay"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginRight="50dp"
-        android:layout_marginBottom="8dp"
+        android:layout_marginLeft="10dp"
+        android:layout_marginTop="4dp"
+        android:layout_marginRight="10dp"
+        android:layout_marginBottom="4dp"
         android:background="@drawable/darkshape"
         android:paddingLeft="5dp"
         android:paddingTop="5dp"
         android:paddingRight="5dp">
-
-        <TextView
-            android:id="@+id/nombre"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:baselineAligned="false"
-            android:text="nombre"
-            android:textColor="@color/grey_300"
-            android:textStyle="bold"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
             android:id="@+id/hora"
@@ -37,11 +29,11 @@
             android:paddingLeft="8dp"
             android:text="hora"
             android:textColor="@color/grey_500"
-            android:textSize="10dp"
+            android:textSize="12dp"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/mensaje"
-            app:layout_constraintVertical_bias="1.0"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.0"
             tools:ignore="Suspicious0dp" />
 
 
@@ -49,12 +41,13 @@
             android:id="@+id/mensaje"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:paddingStart="4dp"
             android:text="mensaje"
             android:textColor="#FFFFFFFF"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/nombre" />
+            app:layout_constraintTop_toBottomOf="@+id/hora" />
 
         <ImageView
             android:id="@+id/mensajeFoto"
@@ -71,8 +64,25 @@
             app:layout_constraintTop_toTopOf="@+id/mensaje"
             app:layout_constraintVertical_bias="0.0" />
 
+        <TextView
+            android:id="@+id/nombre"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:baselineAligned="false"
+            android:text="nombre"
+            android:textColor="@color/grey_300"
+            android:textStyle="italic"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="@+id/mensaje"
+            app:layout_constraintTop_toBottomOf="@+id/mensaje" />
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 
+    <ProgressBar
+        android:id="@+id/progressBar"
+        style="?android:attr/progressBarStyleHorizontal"
+        android:layout_width="match_parent"
+        android:layout_height="3dp" />
 
 
 </LinearLayout>
