--- a/app/src/main/res/layout/card_view_history.xml
+++ b/app/src/main/res/layout/card_view_history.xml
@@ -72,7 +72,9 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:paddingLeft="16dp"
-                    android:text="Loading..." />
+                    android:paddingTop="4dp"
+                    android:text="Loading..."
+                    android:textColor="#FFFFFF" />
             </LinearLayout>
 
             <LinearLayout
@@ -93,7 +95,9 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:paddingLeft="16dp"
-                    android:text="Loading..." />
+                    android:paddingTop="4dp"
+                    android:text="Loading..."
+                    android:textColor="#FFFFFF" />
             </LinearLayout>
 
             <LinearLayout
@@ -114,7 +118,9 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:paddingLeft="16dp"
-                    android:text="Loading..." />
+                    android:paddingTop="4dp"
+                    android:text="Loading..."
+                    android:textColor="#FFFFFF" />
             </LinearLayout>
 
             <LinearLayout
@@ -135,7 +141,9 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:paddingLeft="16dp"
-                    android:text="Loading..." />
+                    android:paddingTop="4dp"
+                    android:text="Loading..."
+                    android:textColor="#FFFFFF" />
             </LinearLayout>
 
             <LinearLayout
@@ -156,7 +164,9 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:paddingLeft="16dp"
-                    android:text="Loading..." />
+                    android:paddingTop="4dp"
+                    android:text="Loading..."
+                    android:textColor="#FFFFFF" />
             </LinearLayout>
 
             <LinearLayout
@@ -177,7 +187,9 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:paddingLeft="16dp"
-                    android:text="Loading..." />
+                    android:paddingTop="4dp"
+                    android:text="Loading..."
+                    android:textColor="#FFFFFF" />
             </LinearLayout>
 
             <LinearLayout
@@ -198,7 +210,9 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:paddingLeft="16dp"
-                    android:text="Loading..." />
+                    android:paddingTop="4dp"
+                    android:text="Loading..."
+                    android:textColor="#FFFFFF" />
             </LinearLayout>
 
             <LinearLayout
@@ -219,7 +233,9 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:paddingLeft="16dp"
-                    android:text="Loading..." />
+                    android:paddingTop="4dp"
+                    android:text="Loading..."
+                    android:textColor="#FFFFFF" />
             </LinearLayout>
 
             <TextView
